--- a/.github/workflows/first-python-app.yml
+++ b/.github/workflows/first-python-app.yml
@@ -2,7 +2,7 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
  #Just a demo that I created on Jan 8
 
-name: Python application
+name: My First Githib Action 
 
 on:
   push:
