--- a/.github/workflows/simple-python-001.yml
+++ b/.github/workflows/simple-python-001.yml
@@ -23,8 +23,16 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+      - name: Python version
+        run: |
+          python --version
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
-          python --version
+          pip install flake8 pytest numpy pandas
+
+      - name: pip list
+        run: |
+          echo "Listing installed Python packages:"
+          python -m pip list
