--- a/.github/workflows/simple-python-001.yml
+++ b/.github/workflows/simple-python-001.yml
@@ -2,7 +2,7 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 #Just a demo that I created on Jan 8
 
-name: My First Githib Action
+name: action-001
 
 on:
   push:
