--- a/.github/workflows/simple-python-002.yml
+++ b/.github/workflows/simple-python-002.yml
@@ -5,11 +5,9 @@ name: action-002
 
 on:
     push:
-        branches:
-            - main
+        branches: ["master"]
     pull_request:
-        branches:
-            - main
+        branches: ["master"]
 
 jobs:
     build:
