--- a/.github/workflows/simple-python-002.yml
+++ b/.github/workflows/simple-python-002.yml
@@ -30,3 +30,7 @@ jobs:
             - name: Python script
               run: |
                   python github-actions-demo/action-002/hello.py
+
+            - name: Echo
+              run: |
+                  echo Hello from action-002
